[patch.crates-io]
#axum = { git = "https://github.com/rjzak/axum", branch = "wasi_wip" }
#axum-core = { git = "https://github.com/rjzak/axum", branch = "wasi_wip" }
#axum-extra = { git = "https://github.com/rjzak/axum", branch = "wasi_wip" }
#axum-macros = { git = "https://github.com/rjzak/axum", branch = "wasi_wip" }
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
tokio-macros = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
tokio-util = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
hyper = { git = "https://github.com/rjzak/hyper", branch = "wasi_wip" }

[package]
name = "wasi-crypto-signing-server-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.13.1"
serde = { version = "^1.0.143", features = ["derive"] }
serde_json = "^1.0.83"
anyhow = "^1.0.55"
axum = { version = "0.5.15", features = ["headers"] }
base64 = "0.13.0"
tokio = { version = "1.20.1", features = ["macros", "rt"] }
wasi-crypto-guest = { git = "https://github.com/WebAssembly/wasi-crypto", rev="fa309ac"}

[dev-dependencies]
rand = "0.8"
tower = { version = "^0.4.11", features = ["util"] }
hyper = { git = "https://github.com/rjzak/hyper", branch = "wasi_wip", features = ["server"] }
